@@ -20,6 +20,7 @@ Version 0.12.0-SNAPSHOT
   - Changed some speed units (KMH, KNOT, MPH) to their base units
     (KILOMETERS, NAUTICAL_MILES, STATUTE_MILES) so that more sentences
     can use them @joshsweaney
+  - Added separate convenience methods for ship and cargo type strings @joshsweaney
 
 Version 0.11.0 (2019-07-06)
 
